ngorck test done